# LuckfoxAI

./: README.md  SETUP.md
Misc/: S90autoswap
Projects/Aruco_Detector/: CMakeLists.txt  README.md  main.cpp
Projects/Aruco_Detector/libs/: download.sh
Projects/DemoYolo/cpp/: CMakeLists.txt
Projects/DemoYolo/cpp/src/: main.cc
Projects/DemoYolo/cpp/utils/: image_utils.c
Projects/DemoYolo/model/: yolov5_320.rknn
Projects/ESP_01/: Makefile
Projects/ESP_01/firmware/: firmware.ino
Projects/ESP_01/software/: main.cpp
Projects/GPIO/: Makefile  a.out  main.cpp
Projects/HelloWorld/: Makefile
Projects/HelloYolov10/cpp/: CMakeLists.txt
Projects/HelloYolov10/model/: yolov10.rknn
Projects/HelloYolov5/cpp/src/: main.cc
Projects/HelloYolov6/cpp/: CMakeLists.txt
Projects/HelloYolov7/cpp/: CMakeLists.txt
Projects/HelloYolov8/cpp/: CMakeLists.txt
Projects/HelloYolov8/model/: yolov8.rknn
Projects/Interfaces/UART/: Makefile  main.cpp
Projects/Interrupts/: Makefile  gpio.h  main.cpp
Projects/MJPEG_Camera/: main.cpp
Projects/MJPEG_Camera/libs/: .gitignore
Projects/OpenCVMobile/: CMakeLists.txt  main.cpp
Projects/OpenCV_CSI_Camera/: main.cpp
Projects/RecordDataset/: CMakeLists.txt  main.cpp
Projects/RecordDataset/libs/: .gitignore  download.sh
Projects/SIM800/: Makefile  README.md  main.cpp  sim800.h
Projects/SIM900/: Makefile  README.md  main.cpp  sim900.h
Projects/SPITest/: Makefile  main.cpp
Projects/SPITest/arduino_code/: main.c
Projects/StreamYolo/cpp/: CMakeCache.txt  CMakeLists.txt
Projects/StreamYolo/model/: .gitignore  README.md  cv_marker_1.1.rknn  nozzle_esp_320_real.rknn
Projects/Yolov5CustomDetector/: .gitignore  nozzle_subset_20.txt
Projects/Yolov8_mAP_Measure/cpp/: CMakeLists.txt
Projects/Yolov8_mAP_Measure/cpp/include/: postprocess.h
Projects/Yolov8_mAP_Measure/cpp/src/: main.cc  postprocess.cc  yolov8.cc
Projects/Yolov8_mAP_Measure/cpp/utils/: image_utils.c
Projects/Yolov8_mAP_Measure/model/: labels.txt
YoloPCEnv/yolov10/: setup_and_export.sh
YoloPCEnv/yolov5/: .gitignore  README.md  setup_and_export.sh
YoloPCEnv/yolov8/: .gitignore  README.md  setup_and_export.sh
(+26 files in other folders)
